transpiler/internal/tests/types/soundness/mep5_p13_for_any_source.mochi
// MEP-5 P13: `for x in source` where source has type `any` is T022.
// The prior behaviour silently bound `x : any`, masking a soundness hole.
fun iter(xs: any) {
  for x in xs {
    print(x)
  }
}
